--- a/AppShoppingCenter/Resources/Styles/ExplicitStyles.xaml
+++ b/AppShoppingCenter/Resources/Styles/ExplicitStyles.xaml
@@ -4,26 +4,26 @@
              x:Class="AppShoppingCenter.Resources.Styles.ExplicitStyles">
     
     <Style TargetType="Label" x:Key="PrimaryText">
-        <Setter Property="TextColor" Value="#000000"/>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light='#000000', Dark='#FFFFFF'}"/>
         <Setter Property="FontFamily" Value="OpenSansBold"/>
         <Setter Property="TextTransform" Value="Uppercase"/>
         <Setter Property="FontSize" Value="{OnIdiom Tablet=16, Default=14}"/>
     </Style>
     
     <Style TargetType="Label" x:Key="SecondaryText">
-        <Setter Property="TextColor" Value="#A0A0A0"/>
+        <Setter Property="TextColor" Value="{StaticResource Gray300}"/>
         <Setter Property="FontFamily" Value="OpenSansLight"/>
         <Setter Property="FontSize" Value="12"/>
     </Style>
     
     <Style TargetType="Label" x:Key="HeadingText">
-        <Setter Property="TextColor" Value="#000000"/>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light='#000000', Dark='#FFFFFF'}"/>
         <Setter Property="FontFamily" Value="OpenSansBold"/>
         <Setter Property="FontSize" Value="14"/>
     </Style>
     
     <Style TargetType="Label" x:Key="DetailText">
-        <Setter Property="TextColor" Value="#000000"/>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light=Black, Dark={StaticResource Gray300}}"/>
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="12"/>
     </Style>
